Fixed issue with non-transparent scrollbar bg

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ code {
 
 body {
   background-image: url('./bg.png');
+  overflow: overlay;
 }
 
 .sub-body {
